# pokebot

./: .gitignore  README.md  __init__.py  __main__.py  chain.json  pokebot.py  pokedata.py  pyproject.toml  requirements.txt
bot/: __init__.py  commands.py  core.py
config/: config.py
data/: __init__.py  pokedata.py
env/: pyvenv.cfg
utils/: image_utils.py
