[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokebot"
version = "0.1.0"
description = "A bot for interacting with Pokémon data"
authors = [
    { name="Nathan Kawamoto", email="njkawamoto@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
